# esp32-app-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/OTA/: CMakeLists.txt  README.md  ota.cpp
components/OTA/include/: ota.h
components/base_console/: CMakeLists.txt  README.md  console.c
components/base_console/include/: console.h
components/console-cpp/: CMakeLists.txt  CppConsole.cpp  README.md
components/console-cpp/include/: CppConsole.h
components/cpp_utils/: CMakeLists.txt  FreeRTOSTimer.cpp  GeneralUtils.cpp  HttpRequest.cpp  I2C.h  I2S.cpp  I2S.h  MMU.cpp  MMU.h  NeoPixelWiFiEventHandler.cpp  NeoPixelWiFiEventHandler.h  OV7670.cpp  OV7670.h  PWM.cpp  PWM.h  README.md  SOC.cpp  SOC.h  SPI.cpp  Socket.cpp  Socket.h  System.cpp  System.h  WiFi.cpp  WiFi.h  WiFiEventHandler.cpp  WiFiEventHandler.h
components/esp-api-server/: ApiHttpRequest.cpp  ApiHttpRequest.h  ApiHttpResponse.cpp  ApiHttpResponse.h  ApiServer.cpp  ApiServer.h  CMakeLists.txt  README.md  UrlMapper.cpp  UrlMapper.h
main/: CMakeLists.txt  EventHandler.cpp  SetupApi.cpp  SetupApi.h  SimpleWebServer.cpp  captdns.cpp  captdns.h  idf_component.yml  main.cpp  main.h  old.cpp  old.h
